--- a/index.html
+++ b/index.html
@@ -407,6 +407,9 @@
         </div>
       </div>
     </div>
+    <div class="swiper-progress-bar js-progress-bar">
+      <span class="slide-progress-bar"></span>
+    </div>
   </section>
 
   <section class="s-games">
